<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mindvision_camera</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1002984726@qq.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp_components</depend>
  <depend>camera_info_manager</depend>
  <depend>ament_lint_auto</depend>
  <depend>ament_lint_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
